# icarus-print3d-frontend

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  api.html  index.html  justfile  server.html
.sqlx/: query-4674f4c2734fada044c953d2d79c6d40fde94a083c655edbc7a6877a87141da7.json  query-4874755199cb16b9e88cc4028dea0eb16dd69e18151c537803799bb6bf4f366b.json  query-51aabc838573602201b89209b8894f101f228c495bdb100fa0e9f9ad1f8a54ea.json  query-5d2786f246e9f33d340f63cfb3c384b326cea138ea0cce8f5a22455a3f237dee.json  query-657fbf56ace50ea23568614be6f5285fb9d19dcaa3b490369c683c92da1e5cf6.json  query-996aa38c10d87f8523e34e6529f4174484adfb911b142efce1fa6475211c87c5.json  query-a6b1b8eb21354ce22eba2c1b8ae277715911299837570a6a77052d0cf51eeb42.json  query-c41469a4c1a7054a85d06eb13700c61c92fc0feddc5502e596fca706e1a09b6b.json  query-c6f9de60233fec4e0d55b5a8ab7864a66fbffbc9e9773102fce4ca8a5c8a4aa9.json  query-d0d6dbd4cfc42a5b6effa2b0647debfafe94f97adf73eff2964f37b547f5bb76.json  query-d3fd7ead0d12234480e0b32b93d9d77b909f5cf44150e4744b7340c69e9ef0e0.json  query-d7c3793b4e26be36157707b1df389afcb97eb0a9612236084d57663c88bc669e.json
migrations/: 20251001125226_create_users_table.sql  20251003035519_make_email_case_insensitive.sql  20251004103021_change_password_hash_to_text.sql  20251008182532_create_todo_table.sql  20251009202206_create_users_table.sql  20251009202222_create_todos_table.sql  20251011031024_create_print_orders_table.sql
src/: auth.rs  config.rs  flash.rs  init.rs  lib.rs  main.rs  middlewares.rs  models.rs  paths.rs  pricing.rs
src/data/: errors.rs  mod.rs
src/data/commands/: print_order.rs  todo.rs  user.rs
src/data/queries/: mod.rs  print_order.rs  todo.rs  user.rs
src/handlers/: auth.rs  errors.rs  fallback.rs  forms.rs  helpers.rs  mod.rs  pages.rs  todos.rs
src/handlers/actions/: mod.rs  sign_out.rs
src/handlers/dtos/: mod.rs  print_order.rs  todo.rs
src/handlers/forms/: mod.rs  print_order.rs  sign_in.rs  sign_out.rs  sign_up.rs  todo.rs
src/handlers/pages/: about.rs  create.rs  mod.rs  new_order.rs  print_orders.rs  root.rs  sign_in.rs  sign_up.rs  todos.rs
src/models/: todo.rs  user.rs
src/models/dtos/: user.rs
src/routes/: actions.rs  auth.rs  forms.rs  http_tracing.rs  mod.rs  pages.rs  todos.rs
src/views/: mod.rs
src/views/components/: button.rs  flash.rs  form.rs  mod.rs
src/views/layout/: base.rs  footer.rs  mod.rs  navigation.rs
src/views/pages/: about.rs  create.rs  home.rs  mod.rs  not_found.rs  print_orders.rs  root.rs  server_error.rs  sign_in.rs  sign_up.rs  todos.rs
참고자료/: print3d.pptx:Zone.Identifier  print3d.pptxZone.Identifier
참고자료/pptx_extracted/: [Content_Types].xml
참고자료/pptx_extracted/ppt/: presentation.xml
참고자료/pptx_extracted/ppt/_rels/: presentation.xml.rels
참고자료/pptx_extracted/ppt/fonts/: font5.fntdata  font6.fntdata  font7.fntdata
참고자료/pptx_extracted/ppt/slides/: slide1.xml  slide2.xml  slide3.xml  slide4.xml  slide5.xml  slide6.xml
참고자료/pptx_extracted/ppt/slides/_rels/: slide2.xml.rels  slide3.xml.rels  slide4.xml.rels  slide5.xml.rels  slide6.xml.rels
