[package]
name = "maud_tailwind_htmx_axum_sqlx_postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1.47.1", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.226", features = ["derive"] }

# Template Engine
maud = { version = "0.27.0", features = ["axum"] }

# Utilities
regex = "1.11.3"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Web Framework
axum = { version = "0.8.4", features = ["macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
